# meeting-app

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HOTKEYS.md  README.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: branch-name.yml  ci.yml  codeql.yml  release-source.yml  security.yml
context/: README.md
scripts/: check_affinity.py  check_api.py  check_audio.py  check_capture.py  check_env.py  check_pipeline.py  check_screen.py
src/: config.py  main.py
src/ai/: conversation.py  screen.py  worker.py
src/audio/: capture.py  loopback.py  loopback_sounddevice.py  loopback_wasapi.py  preprocess.py  vad.py
src/core/: instance.py  pipeline.py
src/overlay/: clickthrough.py  hotkeys.py  hotkeys_pynput.py  hotkeys_win32.py  shield.py  status.py  window.py
src/platform/: __init__.py
src/stt/: transcriber.py
